--- a/HotelBookingSystem/HotelBookingSystem.Desktop/HotelBookingSystemStyles.axaml
+++ b/HotelBookingSystem/HotelBookingSystem.Desktop/HotelBookingSystemStyles.axaml
@@ -12,6 +12,7 @@
 		<Setter Property="Margin" Value="0, 4, 0, 4"/>
 		<Setter Property="FontSize" Value="12"/>
 		<Setter Property="Background" Value="White"/>
+		<Setter Property="BorderThickness" Value="1"/>
 	</Style>
 
 	<Style Selector="Label">
@@ -22,4 +23,13 @@
 	<Style Selector="Grid.MainGrid">
 		<Setter Property="Margin" Value="4"/>
 	</Style>
+
+	<Style Selector="DataGrid.SingleGrid">
+		<Setter Property="Margin" Value="4, 4, 4, 4"/>
+	</Style>
+
+	<Style Selector="StackPanel.ButtonStack">
+		<Setter Property="Margin" Value="4, 4, 4, 4"/>
+	</Style>
+	
 </Styles>
