--- a/HotelBookingSystem/HotelBookingSystem.Desktop/Views/AddLodgerWindow.axaml
+++ b/HotelBookingSystem/HotelBookingSystem.Desktop/Views/AddLodgerWindow.axaml
@@ -1,18 +1,17 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:vm="using:HotelBookingSystem.Desktop.ViewModels"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="180"
-        x:Class="HotelBookingSystem.Desktop.Views.AddHotelWindow"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        x:Class="HotelBookingSystem.Desktop.Views.AddLodgerWindow"
         Title="Добавить или редактировать"
 		SizeToContent="Height"
 		MinWidth="400"
 		MaxWidth="400">
-
-
+	
 	<Design.DataContext>
-		<vm:HotelViewModel/>
+		<vm:LodgerViewModel/>
 	</Design.DataContext>
 
 
@@ -21,12 +20,12 @@
 	</Window.Styles>
 
 	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto,*" Margin="4, 4, 4, 4" ColumnDefinitions="Auto,*">
-		<Label Grid.Row="0" Grid.Column="0" Margin="4, 4, 4, 4">Название</Label>
-		<TextBox Grid.Row="0" Grid.Column="1" Margin="4, 4, 4, 4" Text="{Binding Name}"/>
-		<Label Grid.Row="1" Grid.Column="0" Margin="4, 4, 4, 4">Город</Label>
-		<TextBox Grid.Row="1" Grid.Column="1" Margin="4, 4, 4, 4" Text="{Binding City}"/>
-		<Label Grid.Row="2" Grid.Column="0" Margin="4, 4, 4, 4">Адрес</Label>
-		<TextBox Grid.Row="2" Grid.Column="1" Margin="4, 4, 4, 4" Text="{Binding Adress}"/>
+		<Label Grid.Row="0" Grid.Column="0" Margin="4, 4, 4, 4">Номер паспорта</Label>
+		<TextBox Grid.Row="0" Grid.Column="1" Margin="4, 4, 4, 4" Text="{Binding Passport}"/>
+		<Label Grid.Row="1" Grid.Column="0" Margin="4, 4, 4, 4">Имя</Label>
+		<TextBox Grid.Row="1" Grid.Column="1" Margin="4, 4, 4, 4" Text="{Binding Name}"/>
+		<Label Grid.Row="2" Grid.Column="0" Margin="4, 4, 4, 4">Дата рождения</Label>
+		<TextBox Grid.Row="2" Grid.Column="1" Margin="4, 4, 4, 4" Text="{Binding Birthdate}"/>
 
 		<StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
