--- a/HotelBookingSystem/HotelBookingSystem.Desktop/HotelBookingSystemStyles.axaml
+++ b/HotelBookingSystem/HotelBookingSystem.Desktop/HotelBookingSystemStyles.axaml
@@ -9,10 +9,22 @@
 	<Style Selector="Button.ToolButton">
 		<Setter Property="Width" Value="110"/>
 		<Setter Property="Height" Value="30"/>
+		<Setter Property="BorderBrush" Value="Gray"/>
+		<Setter Property="BorderThickness" Value="1"/>
 		<Setter Property="Margin" Value="0, 4, 0, 4"/>
 		<Setter Property="FontSize" Value="12"/>
 		<Setter Property="Background" Value="White"/>
+	</Style>
+
+	<Style Selector="Button.AnalyticsButton">
+		<Setter Property="Width" Value="250"/>
+		<Setter Property="Height" Value="30"/>
+		<Setter Property="BorderBrush" Value="Gray"/>
 		<Setter Property="BorderThickness" Value="1"/>
+		<Setter Property="Margin" Value="4, 4, 4, 4"/>
+		<Setter Property="FontSize" Value="12"/>
+		<Setter Property="Background" Value="White"/>
+		
 	</Style>
 
 	<Style Selector="Label">
