--- a/Polyclinic/Polyclinic.Client/Views/PatientWindow.axaml
+++ b/Polyclinic/Polyclinic.Client/Views/PatientWindow.axaml
@@ -5,7 +5,7 @@
         xmlns:vm="using:Polyclinic.Client.ViewModels"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Polyclinic.Client.Views.PatientWindow"
-        Title="Редактирование пациента"
+        Title="Добавление"
 		MaxWidth="500"
 		SizeToContent="Height">
 		
