--- a/HotelBookingSystem/HotelBookingSystem.Desktop/Views/ClientsWithMostDaysWindow.axaml
+++ b/HotelBookingSystem/HotelBookingSystem.Desktop/Views/ClientsWithMostDaysWindow.axaml
@@ -6,7 +6,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="HotelBookingSystem.Desktop.Views.ClientsWithMostDaysWindow"
         Title="ClientsWithMostDaysWindow"
-		SizeToContent="WidthAndHeight">
+		SizeToContent="WidthAndHeight"
+		CanResize="False">
 	
 	<Design.DataContext>
 		<vm:ClientsWithMostDaysViewModel/>
